--- a/templates/page.html
+++ b/templates/page.html
@@ -23,6 +23,9 @@
   </head>
   <body>
 
+    <!-- Silver texture indicator -->
+    <div id="silver-texture-indicator" class="silver-texture-indicator"></div>
+
     <!-- Weather Widget - Positioned at top of page -->
     <div style="text-align: center; width: 100%;">
       <div id="weather-outer" class="weather-widget">
